# samael

./: Cargo.toml  README.md  flake.nix
src/crypto/: mod.rs  xmldsig.rs  xmldsig_rs.rs
src/crypto/native/: mod.rs  openssl_backend.rs  rustcrypto_backend.rs
src/crypto/xmldsig/: decrypt.rs  sign.rs
src/idp/: tests.rs
src/schema/: authn_request.rs
src/service_provider/: mod.rs  tests.rs
