[package]
name = "samael"
version = "0.0.20"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/njaremko/samael"
description = "A SAML2 library for Rust"
keywords = ["saml", "saml2", "xml", "sso"]
categories = ["authentication"]

[lib]
# Disabling doctests because they cause nix build check phase to fail
doctest = false
crate-type = ["staticlib", "rlib"]

[features]
# Pure-Rust by default: RustCrypto key/cert/url backend + pure-Rust XML
# digital signatures (sign + verify) and assertion decryption. No C
# dependencies (no libxmlsec1, no libxml2, no OpenSSL).
default = ["rustcrypto", "xmldsig-rs"]
# Native key/cert/url crypto backend using the OpenSSL crate (optional;
# mutually exclusive with `rustcrypto`). Note: the pure-Rust XML stack
# (`xmldsig-rs`) requires `rustcrypto`, so `openssl` only provides the
# key/cert/url operations.
openssl = ["dep:openssl", "dep:openssl-sys", "dep:openssl-probe"]
# Native key/cert/url crypto backend using pure-Rust RustCrypto crates.
# Mutually exclusive with `openssl`.
rustcrypto = [
    "dep:rsa",
    "dep:sha2",
    "dep:p256",
    "dep:x509-cert",
    "dep:signature",
    "dep:rand_core",
    "dep:getrandom",
]
# Pure-Rust XML digital signatures and XML encryption: signature signing &
# verification via the `xml-sec` crate (XML canonicalization) combined with the
# RustCrypto backend for RSA/ECDSA, and RSA/AES assertion decryption. No C
# dependency.
xmldsig-rs = [
    "rustcrypto",
    "dep:xml-sec",
    "dep:roxmltree",
    "dep:sha1",
    "dep:aes",
    "dep:cbc",
    "dep:aes-gcm",
]

[dependencies]
# openssl backend (optional)
openssl = { version = "^0.10.0", optional = true }
openssl-sys = { version = "^0.9.0", optional = true }
openssl-probe = { version = "^0.1.2", optional = true }

# rustcrypto backend (optional)
rsa = { version = "0.10.0-rc.18", features = ["sha2"], optional = true }
sha2 = { version = "0.11.0-rc.4", optional = true }
p256 = { version = "0.14.0-rc.10", features = ["ecdsa", "pem"], optional = true }
x509-cert = { version = "0.3.0-rc.4", features = ["builder", "pem", "std"], optional = true }
signature = { version = "3.0.0-rc.10", optional = true }
rand_core = { version = "0.10.0", optional = true }
getrandom = { version = "0.3", optional = true }

# pure-Rust XML signatures + encryption (optional, xmldsig-rs feature)
xml-sec = { version = "0.1.6", optional = true }
roxmltree = { version = "0.21", optional = true }
sha1 = { version = "0.11.0-rc.2", optional = true }
aes = { version = "0.9.0-rc.1", optional = true }
cbc = { version = "0.2.0-rc.1", optional = true }
aes-gcm = { version = "0.11.0-rc.1", optional = true }

url = "^2.1.1"
quick-xml = { version = "^0.37.2", features = ["serialize"] }
serde = { version = "^1.0.0", features = ["derive"] }
chrono = { version = "^0.4.0", features = ["serde"] }
base64 = "^0.22.0"
flate2 = "^1.0.0"
rand = "^0.9.0"
derive_builder = "^0.20.0"
uuid = { version = "^1.3.0", features = ["v4"] }
data-encoding = "2.9.0"
thiserror = "^2.0.11"
